layed out some of the divs

--- a/main.html
+++ b/main.html
@@ -4,8 +4,16 @@
     <title>
         Byte | Home
     </title>
-    <header class="homeheader">
-    </header>
     <body>
+        <div class="homecontainer">
+            <div class = "webheader">
+                <div class = "headercontent">
+                    <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                </div>
+            </div>
+            <div class="postcontainer">
+                
+            </div>
+        </div>
     </body>
 </html>
