adding header functions for home

--- a/main.html
+++ b/main.html
@@ -8,11 +8,19 @@
         <div class="homecontainer">
             <div class = "webheader">
                 <div class = "headercontent">
-                    <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    <div class="headerhome">
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    </div>
+                    <div class="headersearchbar">
+                        <input type="search" class="searchbar" placeholder="Search Byte" />
+                    </div>
+                    <div class="headericons">
+
+                    </div>
                 </div>
             </div>
-            <div class="postcontainer">
-                
+            <div class="postscontainer">
+                <div class=""></div>
             </div>
         </div>
     </body>
