added some bars like create text post and navigation bar

--- a/main.html
+++ b/main.html
@@ -12,11 +12,41 @@
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
                     </div>
                     <div class="headersearchbar">
-                        <input type="search" class="searchbar" placeholder="Search Byte" />
+                        <input type="search" class="searchbar" placeholder="Search byte" />
                     </div>
-                    <div class="headericons">
+                    <div class="headerprofile">
+                        <div class="profile">
 
+                        </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="createpost">
+                <div class="createposticon">
+                    <div class="createpostusericonholder">
+                        
+                    </div>
+                </div>
+                <div class="createposttext">
+                    <input type="search" class="posttext" placeholder="" />
+                </div>
+                <div class="createpostpic">
+
+                </div>
+                <div class="createpostattach">
+
+                </div>
+            </div>
+            <div class="navigation">
+                <div class="Communities">
+
+                </div>
+                <div class="newposts">
+
+                </div>
+                <div class="topposts">
+
                 </div>
             </div>
             <div class="postscontainer">
