finished create post bar, almost done with navigation

--- a/main.html
+++ b/main.html
@@ -25,28 +25,28 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-                        
+
                     </div>
                 </div>
                 <div class="createposttext">
-                    <input type="search" class="posttext" placeholder="" />
+                    <input type="search" class="posttext" placeholder="Create Post" />
                 </div>
                 <div class="createpostpic">
-
+                    <img src="./images main/image-alt-regular-24.png"/>
                 </div>
                 <div class="createpostattach">
-
+                    <img src="./images main/folder-plus-regular-24.png"/>
                 </div>
             </div>
             <div class="navigation">
-                <div class="Communities">
+                <div class="communities">
 
                 </div>
                 <div class="newposts">
-
+                    <img src="./images main/badge-regular-24.png">
                 </div>
-                <div class="topposts">
-
+                <div class="hotposts">
+                    <img src="./images main/hot-solid-24.png">
                 </div>
             </div>
             <div class="postscontainer">
