--- a/Sign_in.html
+++ b/Sign_in.html
@@ -2,20 +2,18 @@
 <head>
     <link rel="stylesheet" type="text/css" href="Sign_in.css"/>
 </head>
-<body>
+<body >
 
 <div class = "webheader">
     <div class = "headercontent">
-        <span class = "link"> <a style = "color: black; text-decoration: none" href = "google.com"> byte. </a> </span>
+        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
     </div>
 </div>
 
-
+<div class = "block">
+</div>
 <div class = "signcontainer">
     <div class = "container">
-        <div class ="logo">
-            insert logo here
-        </div>
         <div class = "header">
             <span> User Login </span>
         </div>
@@ -49,4 +47,5 @@
         </div>
     </div>
 </div>
+
 </body>
