updated; mostly final

--- a/Sign_up.html
+++ b/Sign_up.html
@@ -6,16 +6,14 @@
 
 <div class = "webheader">
     <div class = "headercontent">
-        <span class = "link"> <a style = "color: black; text-decoration: none" href = "google.com"> byte. </a> </span>
+        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
     </div>
 </div>
 
 
 <div class = "signcontainer">
     <div class = "container">
-        <div class ="logo">
-            insert logo here
-        </div>
+        
         <div class = "header">
             <span> User Registration </span>
         </div>
