updated search bar, fixed post/reply width

--- a/viewpost.html
+++ b/viewpost.html
@@ -11,7 +11,7 @@
         <span class="logo"> byte. </span>
     </div>
     <div class="topbuttons"> 
-        <input type="text" placeholder="Search byte..." >
+        <input type="search" class="searchbar" placeholder="Search byte" />
         <a href="userprofile.html"> Profile </a>
         <a href=""> Log out </a>
     </div>
