Finished base format for both, designing + reply

--- a/profilepage.html
+++ b/profilepage.html
@@ -38,7 +38,21 @@
                 </div>
             </div> 
         </div>
-        <div class="latestpostscontainer">  </div>
+        <div class="latestpostscontainer">  
+            <h2> Latest Posts: </h2> 
+            <div class="latestpost"> 
+                <div class="latestpostinfo">
+                    <div class="latestpostpfp"> 
+                        <img class="userimg" src=""/>
+                    </div>
+                    <p> User Name <br><br> Bits: 0</p>
+                </div>
+                <div class="latestpostsdetails"> 
+                    <h4> Post Title </h4> 
+                    <p> Post description</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
