--- a/CreatePost.html
+++ b/CreatePost.html
@@ -6,7 +6,8 @@
 <body>
     <div class = "webheader">
         <div class = "headercontent">
-            <span class = "link"> <a style = "color: black; text-decoration: none" href = "google.com"> byte. </a> </span>
+            <img class = "logo" src = "logo.png">
+            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
         </div>
     </div>
 
@@ -16,21 +17,30 @@
                 <div class = "posttitle">
                     <input type="text" id="title" name="title" placeholder="Input Title">
                 </div>
+                <div class = "icons">
+                    <button class = "iconbutton" type = "submit">
+                        <img class ="attach" src = "Create_images/attach.png" title="Attach a file">
+                    </button>
+                    <button class = "iconbutton" type = "submit">
+                        <img class ="bold" src = "Create_images/bold.png" title = "Embolden">
+                    </button>
+                    <button class = "iconbutton" type = "submit">
+                        <img class ="italic" src = "Create_images/italics.png" title = "Italicize">
+                    </button>
+                </div>
                 <div class = "contentarea">
-                    <textarea class ="content" rows = "20">Post Content
-
-                    </textarea>
+                    <textarea class ="content" rows = "19"> </textarea>
                 </div>
             </div>
             <div class = "buttons">
                 <div class = "post">
                     <a href = "https://google.com">
-                        <button class  = "submitbutton" type = "post" value = "post"> Post </button>
+                        <button class  = "submitbutton" type = "post" value = "post"> <span class ="buttontext">Post</span> </button>
                     </a>    
                 </div>
                 <div class = "cancel">
                     <a href = "https://google.com">
-                        <button class  = "submitbutton" type = "cancel" value = "cancel"> Cancel </button>
+                        <button class  = "submitbutton" type = "cancel" value = "cancel"> <span class ="buttontext">Cancel</span> </button>
                     </a>    
                 </div>
             </div>
