Added design elements, 1 sample made

--- a/profilepage_sample1.html
+++ b/profilepage_sample1.html
@@ -28,11 +28,10 @@
             </div>
 
             <div class="profileinfo"> 
-                <h3> User Name </h3> 
-                <h5> Bits: 0 </h5>
+                <h3> Wala_3h </h3> 
+                <h5> Bits: 1 </h5>
                 <h4> About me: </h4>
-                <p> Profile Description 
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p> Average College student 
                 </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
@@ -46,11 +45,13 @@
                     <div class="latestpostpfp"> 
                         <a href="profilepage.html"> <img class="userimg" src="AYAKA.jpg"/> </a>
                     </div>
-                    <p> User Name <br><br> Bits: 0</p>
+                    <p> Wala-3h <br><br> Bits: 1</p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="viewpost.html"> Post Title </a> </h4> 
-                    <p> Post description</p>
+                    <h4> <a href="viewpost.html"> Usefulness of MDN </a> </h4> 
+                    <p> MDN is a very handy website that can provide easy access to web designing elements-HTML, CSS, and JavaScript.
+
+                    </p>
                 </div>
             </div>
         </div>
