--- a/viewpost.html
+++ b/viewpost.html
@@ -8,11 +8,12 @@
 <body>
 <div class="webheader">
     <div class="headercontent">
-        <span class="logo"> byte. </span>
+        <img class = "logo" src = "logo.png">
+        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
     </div>
     <div class="topbuttons"> 
         <input type="search" class="searchbar" placeholder="Search byte" />
-        <a href="userprofile.html"> Profile </a>
+        <a href="profilepage.html"> Profile </a>
         <a href=""> Log out </a>
     </div>
 </div>
@@ -20,7 +21,7 @@
 <div class="postcontainer">
     <div class="userinfo">
         <div class ="userpfp">
-            <img class="userimg" src="AYAKA.jpg">
+            <a href="profilepage.html"> <img class="userimg" src="AYAKA.jpg"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -38,7 +39,7 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <img class="userimg" src="AYAKA.jpg">
+                <a href="viewprofile.html"> <img class="userimg" src="AYAKA.jpg"> </a>
             </div>
             <p> User_name <br> Bits: 0</p>
         </div>
