finsihed header and other bars, work on making else uniform and sample posts to show

--- a/main.html
+++ b/main.html
@@ -9,14 +9,29 @@
             <div class = "webheader">
                 <div class = "headercontent">
                     <div class="headerhome">
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                        <div class="websitelogo">
+                            <img src="./images main/byte_logo.png"/>
+                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                        </div>
                     </div>
                     <div class="headersearchbar">
                         <input type="search" class="searchbar" placeholder="Search byte" />
                     </div>
                     <div class="headerprofile">
                         <div class="profile">
-
+                            <div class="profileicon">
+                                <div class="profileiconholder">
+                                    <img src="./images main/pfp.jpg"/>
+                                </div>
+                            </div>
+                            <div class="profilecontainer">
+                                <div class="profiledisplayname">
+                                    <span>gojowithiphone</span>
+                                </div>
+                                <div class="profilehandlename">
+                                    <span>u/gojo1234</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -25,7 +40,7 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-
+                        <img src="./images main/pfp.jpg"/>
                     </div>
                 </div>
                 <div class="createposttext">
@@ -40,7 +55,16 @@
             </div>
             <div class="navigation">
                 <div class="communities">
-
+                    <div class="dropdown">
+                        <button class="dropbtn">Communities
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="#">Link 1</a>
+                          <a href="#">Link 2</a>
+                          <a href="#">Link 3</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="newposts">
                     <img src="./images main/badge-regular-24.png">
