--- a/main_community.html
+++ b/main_community.html
@@ -19,7 +19,19 @@
                     </div>
                     <div class="headerprofile">
                         <div class="profile">
-
+                            <div class="profileicon">
+                                <div class="profileiconholder">
+                                    <img src="./images main/pfp.jpg"/>
+                                </div>
+                            </div>
+                            <div class="profilecontainer">
+                                <div class="profiledisplayname">
+                                    <span>gojowithiphone</span>
+                                </div>
+                                <div class="profilehandlename">
+                                    <span>u/gojo1234</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -67,7 +79,7 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-
+                        <img src="./images main/pfp.jpg"/>
                     </div>
                 </div>
                 <div class="createposttext">
