added confirm password

--- a/Sign_up.html
+++ b/Sign_up.html
@@ -29,6 +29,11 @@
             <input type="password" id="password" name="password" required/>
         </div>
 
+        <div class ="ConfirmPass">
+            <label for="confirmpass">Confirm Password:</label>
+            <input type="password" id="confirmpass" name="confirmpass" required/>
+        </div>
+
         <div class = "noAccount">
             <span> Already have an account? <a href = "Sign_in.html"> Log In  </a> here!
             </span>
