Added few details + samples

--- a/profilepage_sample2.html
+++ b/profilepage_sample2.html
@@ -13,7 +13,7 @@
             </div>
             <div class="topbuttons"> 
                 <input type="search" class="searchbar" placeholder="Search byte" />
-                <a href="profilepage_sample1.html"> Profile </a>
+                <a href="profilepage.html"> Profile </a>
                 <a href=""> Log out </a>
             </div>
         </div>
@@ -22,17 +22,16 @@
         <div class="profilecontainer">
             <div class="userinfo">
                 <div class="userpfp">
-                    <img class="userimg" src="AYAKA.jpg" />
+                    <img class="userimg" src="gojowithiphonepfp.jpg" />
                 </div>
                 <div class="editbutton"> <a href=""> Edit </a></a></div>
             </div>
 
             <div class="profileinfo"> 
-                <h3> Wala_3h </h3> 
-                <h5> Bits: 1 </h5>
+                <h3> User Name </h3> 
+                <h5> Bits: Infinite </h5>
                 <h4> About me: </h4>
-                <p> Average College student 
-                </p>
+                <p> Nah, I'd win. </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
                 </div>
@@ -43,16 +42,13 @@
             <div class="latestpost"> 
                 <div class="latestpostinfo">
                     <div class="latestpostpfp"> 
-                        <a href="profilepage_sample1.html"> <img class="userimg" src="AYAKA.jpg"/> </a>
+                        <a href="profilepage_sample2.html"> <img class="userimg" src="gojowithiphonepfp.jpg"/> </a>
                     </div>
-                    <p> Wala-3h <br><br> Bits: 1</p>
+                    <p> gojowithiphone <br><br> Bits: Infinite</p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="samplepost1.html"> HTML Tutorial </a> </h4> 
-                    <p> 
-                        Use MDN.
-                    <!-- MDN is a very handy website that can provide easy access to web designing elements-HTML, CSS, and JavaScript. -->
-                    </p>
+                    <h4> <a href="samplepost2.html"> Something apple </a> </h4> 
+                    <p> SOmething apple </p>
                 </div>
             </div>
         </div>
