added the profile part

--- a/CreatePost.html
+++ b/CreatePost.html
@@ -4,10 +4,29 @@
 </head>
 
 <body>
-    <div class = "webheader">
-        <div class = "headercontent">
-            <img class = "logo" src = "logo.png">
-            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+    <div class = "headercontainer">
+        <div class = "webheader">
+            <div class = "headercontent">
+                <img class = "logo" src = "/images main/byte_logo.png">
+                <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+            </div>
+        
+        <div class="headerprofile">
+            <div class="profile">
+                <div class="profileicon">
+                    <div class="profileiconholder">
+                        <img src="./images main/pfp.jpg"/>
+                    </div>
+                </div>
+                <div class="profilecontainer">
+                    <div class="profiledisplayname">
+                        <span>gojowithiphone</span>
+                    </div>
+                    <div class="profilehandlename">
+                        <span>u/gojo1234</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
