logo now redirects

--- a/Sign_up.html
+++ b/Sign_up.html
@@ -6,7 +6,7 @@
 
     <div class = "webheader">
         <div class = "headercontent">
-            <img class = "logo" src = "logo.png">
+            <a href ="https://google.com"><img class = "logo" src = "logo.png"></a>
             <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
         </div>
     </div>
