Updated viewpost + samples

--- a/samplepost1.html
+++ b/samplepost1.html
@@ -6,17 +6,43 @@
 </head>
 
 <body>
-<div class="webheader">
-    <div class="headercontent">
-        <img class = "logo" src = "logo.png">
-        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+    <div class="homecontainer">
+        <div class="webheader">
+            <div class="headercontent">
+                <div class="headerhome">
+                    <div class="logo">
+                        <img src="logo.png"/>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
+                    </div>
+                </div>
+                <div class="headersearchbar">
+                    <input type="search" class="searchbar" placeholder="Search byte" />
+                </div>
+                <div class="headerprofile">
+                    <div class="profile">
+                        <div class="profileicon">
+                            <div class="profileiconholder">
+                                <!-- ./images main/pfp.jpg -->
+                                <a href="profilepage.html"> <img src="gojowithiphonepfp.jpg"/> </a>
+                            </div>
+                        </div>
+                        <div class="profilecontainer">
+                            <div class="profiledisplayname">
+                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                            </div>
+                            <div class="profilehandlename">
+                                <a href="profilepage.html"> 
+                                <span>u/gojo1234</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="topbuttons"> 
+                        <a href=""> Log out </a>
+                    </div>
+        </div>
+        </div>
     </div>
-    <div class="topbuttons"> 
-        <input type="search" class="searchbar" placeholder="Search byte" />
-        <a href="profilepage.html"> Profile </a>
-        <a href=""> Log out </a>
-    </div>
-</div>
 <div class="mainpage"> 
 <div class="postcontainer">
     <div class="userinfo">
@@ -36,8 +62,8 @@
         </div>
     </div>
     <div class="postinfocontainer">
-        <h4> HTML Tutorial </h4>
-        <p> Use MDN. </p>
+        <h4> MDN is very nice </h4>
+        <p> ^ </p>
         <div class="replybutton"> <a href=""> Reply </a> </div>
     </div>
 </div>
