updated file directories

--- a/samplepost2.html
+++ b/samplepost2.html
@@ -11,7 +11,7 @@
             <div class="headercontent">
                 <div class="headerhome">
                     <div class="logo">
-                        <img src="logo.png"/>
+                        <img src="./images main/logo.png"/>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage.html"> <img src="gojowithiphonepfp.jpg"/> </a>
+                                <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
                             </div>
                         </div>
                         <div class="profilecontainer">
@@ -50,7 +50,7 @@
             <h5> b/Apple </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage_sample2.html"> <img class="userimg" src="gojowithiphonepfp.jpg"> </a>
+            <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -64,7 +64,7 @@
     <div class="postinfocontainer">
         <h4> Apple just dropped the new iPhone 16!!!</h4>
         <p> it good :D</p>
-        <img src="gojowithiphone1.png">
+        <img src="./images main/gojowithiphone1.png">
         <div class="replybutton"> <a href=""> Reply </a> </div>
     </div>
 </div>
