--- a/samplepost5.html
+++ b/samplepost5.html
@@ -11,7 +11,7 @@
         <div class="headercontent">
             <div class="headerhome">
                 <div class="logo">
-                    <img src="logo.png"/>
+                    <img src="./images main/logo.png"/>
                     <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="gojowithiphonepfp.jpg"/> </a>
+                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
@@ -50,7 +50,7 @@
             <h5> b/PCMasterRace </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage.html"> <img class="userimg" src="joshhutcherson.PNG"> </a>
+            <a href="profilepage.html"> <img class="userimg" src="./images main/joshhutcherson.PNG"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -75,7 +75,7 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="rickastley.PNG"> </a>
+                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/rickastley.PNG"> </a>
             </div>
             <p> RickAstley <br><span class="userhandle"> u/nvrgonnagive</span><br> Bits: 4M </p>
             <div class="postdate">
