--- a/viewpost.html
+++ b/viewpost.html
@@ -22,7 +22,7 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="gojowithiphonepfp.jpg"/> </a>
+                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
@@ -49,7 +49,7 @@
             <h5> b/Community </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage.html"> <img class="userimg" src="AYAKA.jpg"> </a>
+            <a href="profilepage.html"> <img class="userimg" src="./images main/AYAKA.jpg"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -71,7 +71,7 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="viewprofile.html"> <img class="userimg" src="AYAKA.jpg"> </a>
+                <a href="viewprofile.html"> <img class="userimg" src="./images main/AYAKA.jpg"> </a>
             </div>
             <p> User_name <br> Bits: 0</p>
             <div class="postdate"> 
