--- a/samplepost1.html
+++ b/samplepost1.html
@@ -11,7 +11,7 @@
             <div class="headercontent">
                 <div class="headerhome">
                     <div class="logo">
-                        <img src="logo.png"/>
+                        <img src="./images main/logo.png"/>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <!-- ./images main/pfp.jpg -->
-                                <a href="profilepage.html"> <img src="gojowithiphonepfp.jpg"/> </a>
+                                <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
                             </div>
                         </div>
                         <div class="profilecontainer">
@@ -50,7 +50,7 @@
             <h5> b/WebDevelopment </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage_sample1.html"> <img class="userimg" src="AYAKA.jpg"> </a>
+            <a href="profilepage_sample1.html"> <img class="userimg" src="./images main/AYAKA.jpg"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -72,7 +72,7 @@
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="gojowithiphonepfp.jpg"> </a>
+                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/pfp.jpg"> </a>
             </div>
             <p> gojowithiphone <br> Bits: Infinite</p>
             <div class="postdate"> 
