--- a/samplepost4.html
+++ b/samplepost4.html
@@ -11,7 +11,7 @@
         <div class="headercontent">
             <div class="headerhome">
                 <div class="logo">
-                    <img src="logo.png"/>
+                    <img src="./images main/logo.png"/>
                     <span class = "link"> <a style = "color: beige; text-decoration: none" href = "google.com"> byte. </a> </span>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <!-- ./images main/pfp.jpg -->
-                            <a href="profilepage.html"> <img src="gojowithiphonepfp.jpg"/> </a>
+                            <a href="profilepage.html"> <img src="./images main/pfp.jpg"/> </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
@@ -50,7 +50,7 @@
             <h5> b/PCBuilding </h5>
         </div>
         <div class ="userpfp">
-            <a href="profilepage.html"> <img class="userimg" src="goatkotsu.png"> </a>
+            <a href="profilepage.html"> <img class="userimg" src="./images main/goatkotsu.png"> </a>
             
         </div>
         <div class="postuserinfo"> 
@@ -85,7 +85,7 @@ Should I just pair these with a standard windows computer or something else made
     <div class="replybox">
         <div class = "replyinfo"> 
             <div class="replypfp"> 
-                <a href="profilepage_sample2.html"> <img class="userimg" src="lumpiangtoge.jpg"> </a>
+                <a href="profilepage_sample2.html"> <img class="userimg" src="./images main/lumpiangtoge.jpg"> </a>
             </div>
             <p> LumpiangToge <br><span class="userhandle"> u/tunamayo</span><br> Bits: tuna </p>
             <div class="postdate">
