home and community page done just needs to update with posts

--- a/main_community.html
+++ b/main_community.html
@@ -113,7 +113,43 @@
                 </div>
             </div>
             <div class="postscontainer">
-                <div class=""></div>
+                <div class="postheader">
+                    <div class="communityposticonholder">
+                        <div class="communityposticon">
+                            
+                        </div>
+                    </div>
+                    <div class="userpostname">
+                        <span class="postedon">b/apple</span>
+                        <span>·</span>
+                        <span>Posted by</span>
+                        <span class="postedby">u/walaeh</span>
+                        <span class="postdate">x hours ago</span>
+                    </div>
+                </div>
+                <div class="posttextcontent">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in metus et mauris cursus finibus in nec felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum fringilla rhoncus auctor. Integer eros arcu, placerat sed sapien sed, consequat dictum nisl. Quisque dictum, justo a vestibulum condimentum, lectus neque consectetur orci, nec dapibus lacus risus ac massa. Donec sit amet justo vitae nisl suscipit aliquet. Cras vulputate convallis lacus eu tincidunt. Etiam eu dapibus elit. Phasellus sed sem sed felis laoreet tristique at eu massa. Cras a fringilla magna, in fermentum ex. Donec at mauris leo. In orci felis, fringilla et sollicitudin sit amet, mattis ut mi.</span>
+                </div>
+                <div class="postpicturecontent">
+
+                </div>
+                <div class="postfooter">
+                    <div class="upbit">
+                        <img src="./images main/up-arrow-regular-24.png"/>
+                    </div>
+                    <div class="downbit">
+                        <img src="./images main/down-arrow-regular-24.png"/>
+                    </div>
+                    <div class="comment">
+                        <img src="./images main/comment-regular-24.png"/>
+                    </div>
+                    <div class="share">
+                        <img src="./images main/share-regular-24.png"/>
+                    </div>
+                    <div class="commentcounter">
+                        <span>x comments</span>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
