--- a/profilepage1.html
+++ b/profilepage1.html
@@ -27,10 +27,10 @@
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
+                                <a href="profilepage1.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -52,11 +52,13 @@
             </div>
 
             <div class="profileinfo"> 
-                <h3> User Name </h3> 
-                <h5> Bits: 0 </h5>
+                <h3> Wala_Eh </h3> <span> u/WalaEh </span><span class="usertitle" style="color: green"> byte Admin</span>
+                <h5> Bits: 1 </h5>
                 <h4> About me: </h4>
-                <p> Profile Description 
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p> 
+                
+                    Average college student <br>
+                    not-so-epic gamer
                 </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
@@ -68,13 +70,13 @@
             <div class="latestpost"> 
                 <div class="latestpostinfo">
                     <div class="latestpostpfp"> 
-                        <a href="profilepage.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
+                        <a href="profilepage1.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
                     </div>
-                    <p> User Name <br><br> Bits: 0</p>
+                    <p> Wala_Eh <br> <span style="padding: 5px;">u/WalaEh</span><br> Bits: 1</p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="viewpost.html"> Post Title </a> </h4> 
-                    <p> Post description</p>
+                    <h4> <a href="samplepost1.html"> MDN is very convenient </a> </h4> 
+                    <p> ^ </p>
                 </div>
             </div>
         </div>
