--- a/profilepage3.html
+++ b/profilepage3.html
@@ -27,10 +27,10 @@
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
+                                <a href="profilepage1.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -46,17 +46,17 @@
         <div class="profilecontainer">
             <div class="userinfo">
                 <div class="userpfp">
-                    <img class="userimg" src="./images main/AYAKA.jpg" />
+                    <img class="userimg" src="./images main/sukunayes.png" />
                 </div>
                 <div class="editbutton"> <a href=""> Edit </a></a></div>
             </div>
 
             <div class="profileinfo"> 
-                <h3> User Name </h3> 
+                <h3> SukunaWithNokia </h3> <span> u/sukunaryomen </span>
                 <h5> Bits: 0 </h5>
                 <h4> About me: </h4>
-                <p> Profile Description 
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p> 
+                    "Nah, I'd Lose."
                 </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
@@ -68,13 +68,13 @@
             <div class="latestpost"> 
                 <div class="latestpostinfo">
                     <div class="latestpostpfp"> 
-                        <a href="profilepage.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
+                        <a href="profilepage3.html"> <img class="userimg" src="./images main/sukunayes.png"/> </a>
                     </div>
-                    <p> User Name <br><br> Bits: 0</p>
+                    <p> SukunaWithNokia <br> <span style="padding: 5px;">u/sukunaryomen</span><br> Bits: 0</p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="viewpost.html"> Post Title </a> </h4> 
-                    <p> Post description</p>
+                    <h4> <a href="samplepost3.html"> Sell me on the iphone </a> </h4> 
+                    <p> I have an android right now and i love the thing to death. I have encountered zero problems with it. I had an iphone once and hated it. But it was the 4 or 4s. All of my friends have iphones and they live in a different state so I know getting an iphone would make it easier for us to communicate. The only problem I have with the iphones are that every time I get new music I have to resynce my whole phone just to add a couple songs or albums. With photos I had to use the photos app and again sync my phone in order to get them off the phone. With Android all I have to do is click and drag both my photos and music and in less than 30 seconds I am done. So r/apple sell on why I should get an ihpone </p>
                 </div>
             </div>
         </div>
