--- a/profilepage2.html
+++ b/profilepage2.html
@@ -27,10 +27,10 @@
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
+                                <a href="profilepage1.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -46,17 +46,17 @@
         <div class="profilecontainer">
             <div class="userinfo">
                 <div class="userpfp">
-                    <img class="userimg" src="./images main/AYAKA.jpg" />
+                    <img class="userimg" src="./images main/gojowithiphonepfp.jpg" />
                 </div>
                 <div class="editbutton"> <a href=""> Edit </a></a></div>
             </div>
 
             <div class="profileinfo"> 
-                <h3> User Name </h3> 
-                <h5> Bits: 0 </h5>
+                <h3> gojowithiphone </h3> <span> u/gojo1234 </span>
+                <h5> Bits: Infinite </h5>
                 <h4> About me: </h4>
-                <p> Profile Description 
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p> 
+                    "Nah, I'd win."
                 </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
@@ -68,13 +68,13 @@
             <div class="latestpost"> 
                 <div class="latestpostinfo">
                     <div class="latestpostpfp"> 
-                        <a href="profilepage.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
+                        <a href="profilepage2.html"> <img class="userimg" src="./images main/gojowithiphonepfp.jpg"/> </a>
                     </div>
-                    <p> User Name <br><br> Bits: 0</p>
+                    <p> gojowithiphone <br> <span style="padding: 5px;">u/gojo1234</span><br> Bits: Infinite</p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="viewpost.html"> Post Title </a> </h4> 
-                    <p> Post description</p>
+                    <h4> <a href="samplepost2.html"> Apple just dropped the new iPhone 16!!! </a> </h4> 
+                    <p> it good :D </p>
                 </div>
             </div>
         </div>
