--- a/profilepage5.html
+++ b/profilepage5.html
@@ -27,10 +27,10 @@
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
+                                <a href="profilepage1.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -46,38 +46,39 @@
         <div class="profilecontainer">
             <div class="userinfo">
                 <div class="userpfp">
-                    <img class="userimg" src="./images main/AYAKA.jpg" />
+                    <img class="userimg" src="./images main/lumpiangtoge.jpg" />
                 </div>
                 <div class="editbutton"> <a href=""> Edit </a></a></div>
             </div>
 
             <div class="profileinfo"> 
-                <h3> User Name </h3> 
-                <h5> Bits: 0 </h5>
+                <h3> LumpiangToge </h3> <span> u/tunamayo </span>
+                <h5> Bits: tuna </h5>
                 <h4> About me: </h4>
-                <p> Profile Description 
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p> 
+                    "Bonito flakes salmon cod roe"
                 </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
                 </div>
             </div> 
         </div>
+        <!-- No post
         <div class="latestpostscontainer">  
             <h2> Latest Posts: </h2> 
             <div class="latestpost"> 
                 <div class="latestpostinfo">
                     <div class="latestpostpfp"> 
-                        <a href="profilepage.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
+                        <a href="profilepage4.html"> <img class="userimg" src="./images main/lumpiangtoge.jpg"/> </a>
                     </div>
-                    <p> User Name <br><br> Bits: 0</p>
+                    <p> LumpiangToge <br> <span style="padding: 5px;">u/tunamayo</span><br> Bits: 100</p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="viewpost.html"> Post Title </a> </h4> 
-                    <p> Post description</p>
+                    <h4> <a href="samplepost4.html"> What are the ideal specs for a PC in 2023? </a> </h4> 
+                    <p> I'm thinking of building my own PC within the next couple months once I save up enough money and I need some second opinions on if the PC hardware I'm looking at would run games like Minecraft, Overwatch 2, COD, etc. smoothly/around 1080p. I'll most likely be using it for uni assignments and general browsing on the side, too. I've been looking at these specs for my build: </p>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 
 </body>
