--- a/profilepage7.html
+++ b/profilepage7.html
@@ -27,10 +27,10 @@
                         </div>
                         <div class="headprofilecontainer">
                             <div class="profiledisplayname">
-                                <a href="profilepage.html"> <span>gojowithiphone</span> </a>
+                                <a href="profilepage1.html"> <span>gojowithiphone</span> </a>
                             </div>
                             <div class="profilehandlename">
-                                <a href="profilepage.html"> 
+                                <a href="profilepage1.html"> 
                                 <span>u/gojo1234</span>
                                 </a>
                             </div>
@@ -46,38 +46,39 @@
         <div class="profilecontainer">
             <div class="userinfo">
                 <div class="userpfp">
-                    <img class="userimg" src="./images main/AYAKA.jpg" />
+                    <img class="userimg" src="./images main/rickastley.PNG" />
                 </div>
                 <div class="editbutton"> <a href=""> Edit </a></a></div>
             </div>
 
             <div class="profileinfo"> 
-                <h3> User Name </h3> 
-                <h5> Bits: 0 </h5>
+                <h3> RickAstley </h3> <span> u/nvrgonnagive </span>
+                <h5> Bits: 4M </h5>
                 <h4> About me: </h4>
-                <p> Profile Description 
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p> 
+                    "You up, Never gonna let you down"
                 </p>
                 <div class="editbutton"> 
                     <a href=""> Edit description </a> 
                 </div>
             </div> 
         </div>
+        <!-- 
         <div class="latestpostscontainer">  
             <h2> Latest Posts: </h2> 
             <div class="latestpost"> 
                 <div class="latestpostinfo">
                     <div class="latestpostpfp"> 
-                        <a href="profilepage.html"> <img class="userimg" src="./images main/AYAKA.jpg"/> </a>
+                        <a href="profilepage7.html"> <img class="userimg" src="./images main/joshhutcherson.PNG"/> </a>
                     </div>
-                    <p> User Name <br><br> Bits: 0</p>
+                    <p> JoshHutcherson <br> <span style="padding: 5px;">u/weewoowooweewoo</span><br> Bits: 46290 </p>
                 </div>
                 <div class="latestpostsdetails"> 
-                    <h4> <a href="viewpost.html"> Post Title </a> </h4> 
-                    <p> Post description</p>
+                    <h4> <a href="samplepost5.html">Need help fixing something </a> </h4> 
+                    <p> I think I broke a part of my pc, video proof is in this link. </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </body>
